--- a/root/index.html
+++ b/root/index.html
@@ -16,7 +16,7 @@
     <div id="header"></div>
 
     <main>
-        <p>さんぷるてきすと</p>
+        <p>ホームのさんぷるてきすと</p>
     </main>
 
     <!-- 共通フッター -->
