update archive system for seminar students

--- a/root/seminar/client/public/index.html
+++ b/root/seminar/client/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
 
-  <title>Seminar App</title>
+  <title>For Seminar - 電子商取引研究室</title>
 </head>
 
 <body>
