--- a/root/for-seminar/index.html
+++ b/root/for-seminar/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
+
+    <meta http-equiv="refresh" content="0; url=/seminar/build/">
 </head>
 
 <body>
@@ -16,7 +18,7 @@
     <div id="header"></div>
 
     <main>
-        <p>ゼミ生向けページのさんぷるてきすと</p>
+        <p>ゼミ生向けアプリへ移動します… <a href="/seminar/build/">こちら</a></p>
     </main>
 
     <!-- 共通フッター -->
