--- a/root/index.html
+++ b/root/index.html
@@ -16,6 +16,7 @@
     <div id="header"></div>
 
     <main>
+        <img src="../img/main.png" alt="main image" class="mainImage" />
         <p>ホームのさんぷるてきすと</p>
     </main>
 
