--- a/root/index.html
+++ b/root/index.html
@@ -16,7 +16,7 @@
     <div id="header"></div>
 
     <main>
-        <img src="../img/main.png" alt="main image" class="mainImage" />
+        <img src="../img/main.png" alt="main image" width="100%" />
         <p>ホームのさんぷるてきすと</p>
     </main>
 
