home and members

--- a/root/index.html
+++ b/root/index.html
@@ -15,9 +15,35 @@
     <!-- 共通ヘッダー -->
     <div id="header"></div>
 
+    <img src="../img/main.png" alt="main image" width="100%" height="500px"/>
     <main>
-        <img src="../img/main.png" alt="main image" width="100%" />
         <p>ホームのさんぷるてきすと</p>
+        <!-- <div class="box">
+            <section class="research">
+                <img src="../img/main.png" alt="main image" width="100%"/>
+            </section>
+
+            <section class="membersbox">
+                <img src="../img/main.png" alt="main image" width="100%"/>
+            </section>
+
+            <section class="news">
+                <img src="../img/main.png" alt="main image" width="100%"/>
+            </section>
+
+            <section class="for-syudents">
+                <img src="../img/main.png" alt="main image" width="100%"/>
+            </section>
+
+            <section class="for-industry">
+                <img src="../img/main.png" alt="main image" width="100%"/>
+            </section>
+
+            <section class="for-seminar">
+                <img src="../img/main.png" alt="main image" width="100%"/>
+            </section>
+        </div> -->
+
     </main>
 
     <!-- 共通フッター -->
