--- a/root/members/index.html
+++ b/root/members/index.html
@@ -15,8 +15,11 @@
     <!-- 共通ヘッダー -->
     <div id="header"></div>
 
-    <main>
-        <p>ゼミ紹介ページのさんぷるてきすと</p>
+    <main> 
+        <div class="box">
+            <div class="img"><img src="../img/main.png" alt="main image" width="50%"/></div>
+            <p class="text">ゼミ紹介ページのさんぷるてきすと</p>
+        </div>
     </main>
 
     <!-- 共通フッター -->
