--- a/root/index.html
+++ b/root/index.html
@@ -9,41 +9,39 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/home.css">
 </head>
 
 <body>
     <!-- 共通ヘッダー -->
     <div id="header"></div>
 
-    <img src="../img/main.png" alt="main image" width="100%" height="500px"/>
     <main>
-        <p>ホームのさんぷるてきすと</p>
-        <!-- <div class="box">
-            <section class="research">
-                <img src="../img/main.png" alt="main image" width="100%"/>
-            </section>
+        <div class="box">
+            <div class="research">
+                <img src="../img/main.png" alt="main image" width="100%" />
+            </div>
 
-            <section class="membersbox">
-                <img src="../img/main.png" alt="main image" width="100%"/>
-            </section>
+            <div class="membersbox">
+                <img src="../img/main.png" alt="main image" width="100%" />
+            </div>
 
-            <section class="news">
-                <img src="../img/main.png" alt="main image" width="100%"/>
-            </section>
+            <div class="news">
+                <img src="../img/main.png" alt="main image" width="100%" />
+            </div>
 
-            <section class="for-syudents">
-                <img src="../img/main.png" alt="main image" width="100%"/>
-            </section>
+            <div class="for-students">
+                <img src="../img/main.png" alt="main image" width="100%" />
+            </div>
 
-            <section class="for-industry">
-                <img src="../img/main.png" alt="main image" width="100%"/>
-            </section>
+            <div class="for-industry">
+                <img src="../img/main.png" alt="main image" width="100%" />
+            </div>
 
-            <section class="for-seminar">
-                <img src="../img/main.png" alt="main image" width="100%"/>
-            </section>
-        </div> -->
-
+            <div class="for-seminar">
+                <img src="../img/main.png" alt="main image" width="100%" />
+            </div>
+        </div>
     </main>
 
     <!-- 共通フッター -->
