--- a/root/index.html
+++ b/root/index.html
@@ -19,27 +19,26 @@
     <main>
         <div class="box">
             <div class="research">
-                <img src="../img/main.png" alt="main image" width="100%" />
+                <a href="/research/"><img src="../img/main.png" alt="main image" width="100%" /></a>
             </div>
-
             <div class="membersbox">
-                <img src="../img/main.png" alt="main image" width="100%" />
+                <a href="/members/"><img src="../img/main.png" alt="main image" width="100%" /></a>
             </div>
 
             <div class="news">
-                <img src="../img/main.png" alt="main image" width="100%" />
+                <a href="/news/"><img src="../img/main.png" alt="main image" width="100%" /></a>
             </div>
 
             <div class="for-students">
-                <img src="../img/main.png" alt="main image" width="100%" />
+                <a href="/for-students/"><img src="../img/main.png" alt="main image" width="100%" /></a>
             </div>
 
             <div class="for-industry">
-                <img src="../img/main.png" alt="main image" width="100%" />
+                <a href="/for-industry/"><img src="../img/main.png" alt="main image" width="100%" /></a>
             </div>
 
             <div class="for-seminar">
-                <img src="../img/main.png" alt="main image" width="100%" />
+                <a href="/for-seminar/"><img src="../img/main.png" alt="main image" width="100%" /></a>
             </div>
         </div>
     </main>
