--- a/root/members/index.html
+++ b/root/members/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <!-- membersCSS -->
+    <link rel="stylesheet" href="members.css">
 </head>
 
 <body>
@@ -17,8 +19,8 @@
 
     <main> 
         <div class="box">
-            <div class="img"><img src="../img/main.png" alt="main image" width="50%"/></div>
-            <p class="text">ゼミ紹介ページのさんぷるてきすと</p>
+            <div class="imgbox"><img src="../img/main.png" alt="main image" class="img" width="100%" height="600px"/></div>
+            <p class="textbox">ゼミ紹介ページのさんぷるてきすと</p>
         </div>
     </main>
 
