--- a/root/research/index.html
+++ b/root/research/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="research.css">
 </head>
 
 <body>
@@ -16,7 +17,13 @@
     <div id="header"></div>
 
     <main>
-        <p>研究分野紹介ページのさんぷるてきすと</p>
+        <!-- <p>研究分野紹介ページのさんぷるてきすと</p> -->
+        <div class="box">
+            <p>研究テーマ1</p>
+            <p>研究テーマ2</p>
+            <p>研究テーマ3</p>
+            <p>研究テーマ4</p>
+        </div>
     </main>
 
     <!-- 共通フッター -->
