--- a/root/research/index.html
+++ b/root/research/index.html
@@ -19,10 +19,22 @@
     <main>
         <!-- <p>研究分野紹介ページのさんぷるてきすと</p> -->
         <div class="box">
-            <p>研究テーマ1</p>
-            <p>研究テーマ2</p>
-            <p>研究テーマ3</p>
-            <p>研究テーマ4</p>
+            <div class="thema">
+                <h2>テーマタイトル1</h2>
+                <p>テーマ内容</p>
+            </div>
+            <div class="thema">
+                <h2>テーマタイトル2</h2>
+                <p>テーマ内容</p>
+            </div>
+            <div class="thema">
+                <h2>テーマタイトル3</h2>
+                <p>テーマ内容</p>
+            </div>
+            <div class="thema">
+                <h2>テーマタイトル4</h2>
+                <p>テーマ内容</p>
+            </div>
         </div>
     </main>
 
