--- a/root/for-seminar/index.html
+++ b/root/for-seminar/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
 
-    <meta http-equiv="refresh" content="0; url=/seminar/build/">
+    <meta http-equiv="refresh" content="0; url=/seminar/">
 </head>
 
 <body>
@@ -18,18 +18,19 @@
     <div id="header"></div>
 
     <main>
-        <p>ゼミ生向けアプリへ移動します… <a href="/seminar/build/">こちら</a></p>
+        <p>ゼミ生向けアプリへ移動します… <a href="/seminar/">こちら</a></p>
     </main>
 
     <!-- 共通フッター -->
     <div id="footer"></div>
 
-    <!-- JSで部品差し込み -->
+    <!-- JSで部品差し込み
     <script src="/js/include.js"></script>
     <script>
         loadPart("header", "/partials/header.html");
         loadPart("footer", "/partials/footer.html");
     </script>
+    -->
 </body>
 
 </html>
