--- a/root/for-seminar/index.html
+++ b/root/for-seminar/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
 
-    <meta http-equiv="refresh" content="0; url=/seminar/">
+    <meta http-equiv="refresh" content="0; url='/seminar/'">
 </head>
 
 <body>
