--- a/root/for-students/index.html
+++ b/root/for-students/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="for-students.css">
 </head>
 
 <body>
@@ -16,7 +17,16 @@
     <div id="header"></div>
 
     <main>
-        <p>下級生向けページのさんぷるてきすと</p>
+        <!-- <p>下級生向けページのさんぷるてきすと</p> -->
+         <div class="box">
+            <div class="Senior-Students">
+                <p>先輩方の声</p>
+            </div>
+            <div class="work">
+                <p>就職先</p>
+                <a href="https://miseruba-yao.jp/" target="_blank">みせるばやお</a>
+            </div>
+         </div>
     </main>
 
     <!-- 共通フッター -->
