--- a/root/members/index.html
+++ b/root/members/index.html
@@ -19,8 +19,32 @@
 
     <main> 
         <div class="box">
-            <div class="imgbox"><img src="../img/main.png" alt="main image" class="img" width="100%" height="600px"/></div>
-            <p class="textbox">ゼミ紹介ページのさんぷるてきすと</p>
+            <div class="imgbox"><img src="../img/moriyama.png" alt="main image" class="img" width="auto" height="600px"/></div>
+            <div class="text">
+                <div class="introduction">
+                    <h1>教授名：森山　真光</h1>
+                    <p>准教授 博士（工学）<br>
+                        所属学科/情報学科　 所属専攻/エレクトロニクス系工学専攻　<br>
+                        東大阪モノづくり専攻（兼担）<br>
+                        情報学研究所　デザイン・クリエイティブ研究所<br>
+                        企業間や商取引で用いるWebサービスについて研究しています。<br>
+                        ビジネスプロセスモデリングというコンセプトに基づいて業務フローや業務システムの最適化を目指しています。<br><br>
+                        専門：サービスコンピューティング<br>
+                        担当科目（学部）：Webアプリケーション、プログラミング実習I、プログラミング実習II、情報システムプロジェクトII、基礎ゼミ１・２、卒業研究、卒業研究ゼミナール<br>
+                        担当科目（大学院）：ビジネスモデリング特論、Webアプリケーション特論、東大阪モノづくり特別研究、エレクトロニクス系工学特別研究<br>
+                        主な研究テーマ：Webサービスに関する研究、ビジネスプロセスモデリングの医療への応用<br>
+                        代表的な研究業績：<br>
+                        (1) Automated Environment Marking UML Class Diagram for Object-Oriented Design Assessment, e-CASE & e-Tech. 2014.<br>
+                        (2) Referrer Spam Detection based on Bayesian Estimation using HTTP Headers, e-CASE & e-Tech. 2013.
+                    </p>
+                </div>
+                <div class="adress">
+                    <p>教員室	E館3階E-319　森山准教授室<br>
+                        内線	5438<br>
+                        メールアドレス	moriyama（at）info.kindai.ac.jp<br>
+                        迷惑メールを避けるため（at）を使用しております。メールする場合は@に書き換えてください。</p>
+                </div>
+            </div>
         </div>
     </main>
 
