--- a/root/index.html
+++ b/root/index.html
@@ -19,26 +19,26 @@
     <main>
         <div class="box">
             <div class="research">
-                <a href="/research/"><img src="../img/main.png" alt="main image" width="100%" /></a>
+                <a href="/research/"><img src="../img/pagelogo/research.png" alt="main image" width="100%" /></a>
             </div>
             <div class="membersbox">
-                <a href="/members/"><img src="../img/main.png" alt="main image" width="100%" /></a>
+                <a href="/members/"><img src="../img/pagelogo/members.png" alt="main image" width="100%" /></a>
             </div>
 
             <div class="news">
-                <a href="/news/"><img src="../img/main.png" alt="main image" width="100%" /></a>
+                <a href="/news/"><img src="../img/pagelogo/news.png" alt="main image" width="100%" /></a>
             </div>
 
             <div class="for-students">
-                <a href="/for-students/"><img src="../img/main.png" alt="main image" width="100%" /></a>
+                <a href="/for-students/"><img src="../img/pagelogo/for-students.png" alt="main image" width="100%" /></a>
             </div>
 
             <div class="for-industry">
-                <a href="/for-industry/"><img src="../img/main.png" alt="main image" width="100%" /></a>
+                <a href="/for-industry/"><img src="../img/pagelogo/for-industry.png" alt="main image" width="100%" /></a>
             </div>
 
             <div class="for-seminar">
-                <a href="/for-seminar/"><img src="../img/main.png" alt="main image" width="100%" /></a>
+                <a href="/for-seminar/"><img src="../img/pagelogo/for-seminar.png" alt="main image" width="100%" /></a>
             </div>
         </div>
     </main>
