--- a/root/members/index.html
+++ b/root/members/index.html
@@ -19,33 +19,59 @@
 
     <main> 
         <div class="box">
-            <div class="imgbox"><img src="../img/moriyama.png" alt="main image" class="img" width="auto" height="600px"/></div>
-            <div class="text">
+            <div class="imgbox">
+                <img src="../img/members/moriyama.png" alt="moriyama" width="auto" height="600px"/>
+                <div class="vero4DRT">
+                    <img src="../img/members/Vero4DRT.png" alt="Vero4DRT" >
+                </div>
+            </div>
+            <!-- <div class="text"> -->
                 <div class="introduction">
-                    <h1>教授名：森山　真光</h1>
-                    <p>准教授 博士（工学）<br>
+                    <div class="profile-images">
+                        <img src="../img/members/HTML5_Logo_256.png" alt="html" class="html">
+                        <img src="../img/members/icons8-nodejs-480.png" alt="node" class="node">
+                        <img src="../img/members/Bitcoin_logo.svg.png" alt="bitcoin" class="bitcoin">
+                    </div>
+                    <h1 class="name"><p>もりやま　　まさみつ</p>教授名：森山　真光</h1>
+                    <p>・所属/役職<br>
+                        准教授 博士（工学）
                         所属学科/情報学科　 所属専攻/エレクトロニクス系工学専攻　<br>
                         東大阪モノづくり専攻（兼担）<br>
                         情報学研究所　デザイン・クリエイティブ研究所<br>
-                        企業間や商取引で用いるWebサービスについて研究しています。<br>
-                        ビジネスプロセスモデリングというコンセプトに基づいて業務フローや業務システムの最適化を目指しています。<br><br>
-                        専門：サービスコンピューティング<br>
-                        担当科目（学部）：Webアプリケーション、プログラミング実習I、プログラミング実習II、情報システムプロジェクトII、基礎ゼミ１・２、卒業研究、卒業研究ゼミナール<br>
-                        担当科目（大学院）：ビジネスモデリング特論、Webアプリケーション特論、東大阪モノづくり特別研究、エレクトロニクス系工学特別研究<br>
-                        主な研究テーマ：Webサービスに関する研究、ビジネスプロセスモデリングの医療への応用<br>
-                        代表的な研究業績：<br>
-                        (1) Automated Environment Marking UML Class Diagram for Object-Oriented Design Assessment, e-CASE & e-Tech. 2014.<br>
-                        (2) Referrer Spam Detection based on Bayesian Estimation using HTTP Headers, e-CASE & e-Tech. 2013.
+                        ・学歴<br>
+                        出身大学：広島大学（学部）<br>
+                        出身大学院：広島大学院（博士前期課程）、大阪大学大学院（博士後期課程）<br>
+                        ・略歴<br>
+                        1997–1998年：和歌山大学 助手 <br>
+                        1999–2001年：和歌山大学 講師 → 2001–2002年：大阪国際大学 助手／講師を歴任 <br>
+                        2002–2003年：企業（シーエイチエヌ株式会社）代表取締役などを経験後、2003年から近畿大学専任講師に着任。2007年以降、准教授として現在に至る。<br>
+                        ・研究分野/専門<br>
+                        電子商取引、Webサービス、サービスコンピューティング <br>
+                        特に、WebサービスやECサービスにおけるビジネスプロセスモデリングおよび最適化の研究。 <br>
+                        最近では、ブロックチェーン を用いた仮想通貨や分散型サービスに関する研究にも取り組み、価値の交換と安心・安全な取引プラットフォームの実現をめざしている。 <br>
+                        ・主な研究/活動例<br>
+                        暗号資産ウォレットと連携可能な「マルチシグ対応コールドストレージ」の基盤開発（安全性と利便性の両立を目指す研究） <br>
+                        学内での仮想通貨ワークショップ／学生向け教育イベントの主催 — ブロックチェーン技術の理解啓発および学生によるビジネスプランの促進に貢献 <br>
+                        学術論文・実務応用の両面で、Webサービスと暗号資産の融合に関する研究を展開中 <br>
+                        ・所属学協会/社会活動<br>
+                        電子情報通信学会、日本生産管理学会、標準化研究学会、IEEE、ACM など<br>
+                        ・教育/指導分野<br>
+                        Webシステム、ビジネスモデルとマネジメント、プログラミング実習、情報学基礎ゼミナール／応用ゼミナール、卒業研究などを担当。 <br>
+                        ・メッセージ／モットー<br>
+                        「ここまでと思ったらそこまで」 ― 謙虚さと努力の大切さを学生に伝える姿勢。 <br>
+                        ・趣味/その他<br>
+                        ウォーキング
                     </p>
                 </div>
-                <div class="adress">
+            <!-- </div> -->
+        </div>
+
+        <div class="adress">
                     <p>教員室	E館3階E-319　森山准教授室<br>
                         内線	5438<br>
                         メールアドレス	moriyama（at）info.kindai.ac.jp<br>
                         迷惑メールを避けるため（at）を使用しております。メールする場合は@に書き換えてください。</p>
                 </div>
-            </div>
-        </div>
     </main>
 
     <!-- 共通フッター -->
