--- a/root/for-students/index.html
+++ b/root/for-students/index.html
@@ -24,7 +24,23 @@
             </div>
             <div class="work">
                 <p>就職先</p>
-                <a href="https://miseruba-yao.jp/" target="_blank">みせるばやお</a>
+                <a href="https://www.eikog.co.jp/" target="_blank">エイコーグループ</a>
+                <a href="https://heisei-intelligence.com/" target="_blank">株式会社ヘイセイインテリジェンス</a>
+                <a href="https://www.amano.co.jp/" target="_blank">アマノ株式会社</a>
+                <a href="https://www.persol-avct.co.jp/company" target="_blank">AVCマルチメディアソフト株式会社</a>
+                <a href="https://www.proassist.co.jp/" target="_blank">株式会社プロアシスト</a>
+                <a href="https://www.fielding-st.co.jp/" target="_blank">NECシステムテクノロジー株式会社</a>
+                <a href="http://www.iscube.co.jp/" target="_blank">株式会社IHIエスキューブ</a>
+                <a href="https://www.ill.co.jp/" target="_blank">株式会社アイル</a>
+                <a href="https://www.nsd.co.jp/" target="_blank">株式会社NSD</a>
+                <a href="https://www.fielding-st.co.jp/" target="_blank">株式会社システナ</a>
+                <a href="https://www.macs.co.jp/" target="_blank">株式会社マックス</a>
+                <a href="https://www.ntt-at.co.jp/" target="_blank">NTTアドバンステクノロジ株式会社</a>
+                <a href="https://www.intec.co.jp/" target="_blank">株式会社インテック</a>
+                <a href="https://www.ogis-ri.co.jp/" target="_blank">株式会社オージス総研</a>
+                <a href="https://www.kyoso.co.jp/" target="_blank">株式会社京装コンピューター</a>
+                <a href="https://comnic.co.jp/" target="_blank">株式会社コムニック</a>
+                <a href="https://www.shimaseiki.co.jp/" target="_blank">株式会社島精機製作所</a>
             </div>
          </div>
     </main>
