--- a/root/for-students/index.html
+++ b/root/for-students/index.html
@@ -18,31 +18,37 @@
 
     <main>
         <!-- <p>下級生向けページのさんぷるてきすと</p> -->
-         <div class="box">
-            <div class="Senior-Students">
-                <p>先輩方の声</p>
+         <div class="mainbox">
+            <div class="eclbox">
+                <div class="text"><p class="ecl">ECL</p><p class="toha">とは</p></div>
+                <p>ECL（Electronic Commerce Laboratory／電子商取引研究室）は、Webアプリケーション開発を軸に、学内サービスの構築やシステム改善など、実践的な開発活動を行う研究室です。フロントエンドからバックエンドまで幅広いWeb技術を学べます。</p>
             </div>
-            <div class="work">
-                <p>就職先</p>
-                <a href="https://www.eikog.co.jp/" target="_blank">エイコーグループ</a>
-                <a href="https://heisei-intelligence.com/" target="_blank">株式会社ヘイセイインテリジェンス</a>
-                <a href="https://www.amano.co.jp/" target="_blank">アマノ株式会社</a>
-                <a href="https://www.persol-avct.co.jp/company" target="_blank">AVCマルチメディアソフト株式会社</a>
-                <a href="https://www.proassist.co.jp/" target="_blank">株式会社プロアシスト</a>
-                <a href="https://www.fielding-st.co.jp/" target="_blank">NECシステムテクノロジー株式会社</a>
-                <a href="http://www.iscube.co.jp/" target="_blank">株式会社IHIエスキューブ</a>
-                <a href="https://www.ill.co.jp/" target="_blank">株式会社アイル</a>
-                <a href="https://www.nsd.co.jp/" target="_blank">株式会社NSD</a>
-                <a href="https://www.fielding-st.co.jp/" target="_blank">株式会社システナ</a>
-                <a href="https://www.macs.co.jp/" target="_blank">株式会社マックス</a>
-                <a href="https://www.ntt-at.co.jp/" target="_blank">NTTアドバンステクノロジ株式会社</a>
-                <a href="https://www.intec.co.jp/" target="_blank">株式会社インテック</a>
-                <a href="https://www.ogis-ri.co.jp/" target="_blank">株式会社オージス総研</a>
-                <a href="https://www.kyoso.co.jp/" target="_blank">株式会社京装コンピューター</a>
-                <a href="https://comnic.co.jp/" target="_blank">株式会社コムニック</a>
-                <a href="https://www.shimaseiki.co.jp/" target="_blank">株式会社島精機製作所</a>
+            <div class="box">
+                <div class="Senior-Students">
+                    <p>先輩方の声</p>
+                </div>
+                <div class="work">
+                    <p>就職先</p>
+                    <a href="https://www.eikog.co.jp/" target="_blank">エイコーグループ</a>
+                    <a href="https://heisei-intelligence.com/" target="_blank">株式会社ヘイセイインテリジェンス</a>
+                    <a href="https://www.amano.co.jp/" target="_blank">アマノ株式会社</a>
+                    <a href="https://www.persol-avct.co.jp/company" target="_blank">AVCマルチメディアソフト株式会社</a>
+                    <a href="https://www.proassist.co.jp/" target="_blank">株式会社プロアシスト</a>
+                    <a href="https://www.fielding-st.co.jp/" target="_blank">NECシステムテクノロジー株式会社</a>
+                    <a href="http://www.iscube.co.jp/" target="_blank">株式会社IHIエスキューブ</a>
+                    <a href="https://www.ill.co.jp/" target="_blank">株式会社アイル</a>
+                    <a href="https://www.nsd.co.jp/" target="_blank">株式会社NSD</a>
+                    <a href="https://www.fielding-st.co.jp/" target="_blank">株式会社システナ</a>
+                    <a href="https://www.macs.co.jp/" target="_blank">株式会社マックス</a>
+                    <a href="https://www.ntt-at.co.jp/" target="_blank">NTTアドバンステクノロジ株式会社</a>
+                    <a href="https://www.intec.co.jp/" target="_blank">株式会社インテック</a>
+                    <a href="https://www.ogis-ri.co.jp/" target="_blank">株式会社オージス総研</a>
+                    <a href="https://www.kyoso.co.jp/" target="_blank">株式会社京装コンピューター</a>
+                    <a href="https://comnic.co.jp/" target="_blank">株式会社コムニック</a>
+                    <a href="https://www.shimaseiki.co.jp/" target="_blank">株式会社島精機製作所</a>
+                </div>
             </div>
-         </div>
+        </div>
     </main>
 
     <!-- 共通フッター -->
