--- a/root/research/index.html
+++ b/root/research/index.html
@@ -20,20 +20,46 @@
         <!-- <p>研究分野紹介ページのさんぷるてきすと</p> -->
         <div class="box">
             <div class="thema">
-                <h2>テーマタイトル1</h2>
-                <p>テーマ内容</p>
+                <h2>Eコマース技術・次世代Web構築</h2>
+                <p>EC-CUBE や WooCommerce などのオープンソースのECプラットフォームを調査し、ヘッドレスコマースやAPI化など最新のEC技術を学びます。
+                    また、SEO・チャットウィジェットの導入、アクセス解析によるユーザー行動分析、A/Bテストなどを通じて、Webマーケティングとサイト改善の実践的な手法を検討します。
+                    企業連携を通じて、実際の課題解決に直結するWeb改善提案も行います。
+                </p>
             </div>
             <div class="thema">
-                <h2>テーマタイトル2</h2>
-                <p>テーマ内容</p>
+                <h2>分散台帳技術（ブロックチェーン）とトークン活用</h2>
+                <p>分散台帳技術を用いたトークンの発行・管理・支払いシステムの研究を進めます。
+                    感謝を伝える“感謝トークン”など、教育機関・企業での利用を想定した応用モデルの検討を行います。
+                    また、DAO（自律分散組織）を通じた新しい組織モデルにも触れ、秘密鍵管理の安全性と利便性を両立する技術についても調査・提案を行います。
+                </p>
             </div>
             <div class="thema">
-                <h2>テーマタイトル3</h2>
-                <p>テーマ内容</p>
+                <h2>スマートコントラクト技術と開発基盤</h2>
+                <p>Ethereum 以外のブロックチェーン環境も含めて、スマートコントラクトの開発と実行基盤を構築するテーマです。
+                    Solidityだけでなく、PHPを用いた独自の分散型台帳技術の実装など、言語・環境に依存しない実験的な開発にも取り組みます。
+                    また、ゼロ知識証明など、近年注目される暗号技術の理解にも挑戦し、安全で透明性の高いシステム構築を目指します。
+                </p>
             </div>
             <div class="thema">
-                <h2>テーマタイトル4</h2>
-                <p>テーマ内容</p>
+                <h2>認証・アイデンティティ技術（デジタル学生証／参加証）</h2>
+                <p>大学の「学生証」や「イベント参加証」をデジタル化し、改ざん防止・来場管理・ログの自動収集を実現するテーマです。
+                    アカデミックシアタープロジェクトとの連携を視野に入れ、ブロックチェーンや電子署名を活用したアイデンティティ管理の応用を探ります。
+                    授業ログの分散化や、証明書のオンライン発行など、教育DXへの応用も重視します。
+                </p>
+            </div>
+            <div class="thema">
+                <h2>医療×OCR／機械学習（近畿大学病院 薬剤部）</h2>
+                <p>入院患者が持参する薬の鑑別を機械学習で自動化し、確認作業を効率化する研究テーマです。
+                    お薬手帳のOCR読み取りや、ミスのない情報入力のUI設計なども含め、医療現場での実用を見据えたシステム開発を行います。
+                    医療機関との共同研究を通じて、高い信頼性と実用性を備えたシステムの提案を目指します。
+                </p>
+            </div>
+            <div class="thema">
+                <h2>画像認識・文書理解の応用（民間企業連携）</h2>
+                <p>手書き家系図の自動読み取りなど、画像処理やOCR技術を活用するテーマです。
+                    企業（プラクス株式会社）との共同研究を通じて、画像認識・文字認識のアルゴリズムを応用し、一般ユーザー向けアプリケーション開発にも取り組みます。
+                    また、図形認識・文字認識の基礎技術の調査から応用まで幅広くカバーします。
+                </p>
             </div>
         </div>
     </main>
